# Flashpay

./: .gitignore  .gitmodules  AUTHORS  ChangeLog  INSTALL.md  Makefile.am  README  README.1st  RELEASE.md  bootstrap  confdefs.h  configure.ac
contrib/: .gitignore  Makefile.am  Makefile.am.in  auditor-report.tex.j2  bad_gateway.en.must  check-prebuilt  exchange-pp-v0.rst  exchange-tos-bfh-v0.rst  exchange-tos-netzbon-v0.rst  exchange-tos-tops-v0-de.rst  exchange-tos-tops-v0-en.rst  exchange-tos-tops-v0-fr.rst  exchange-tos-tops-v0.rst  exchange-tos-v0.rst  gana-latest.sh  gana-update.sh  gana.sh  gnunet.tag  kyc-proof-already-done.en.must  kyc-proof-bad-request.en.must  kyc-proof-endpoint-unknown.en.must  kyc-proof-internal-error.en.must  kyc-proof-logic-failure.en.must  kyc-proof-target-unknown.en.must  kyc_failed.en.must  kyc_interaction_failed.en.must  kyc_provider_internal_error.en.must  kyc_provider_ratelimit.en.must  kyc_provider_timeout.en.must  kyc_provider_unexpected_reply.en.must  kyc_user_failed.en.must  kycaid-invalid-request.en.must  microhttpd.tag  oauth2-authentication-failure.en.must  oauth2-authorization-failure-malformed.en.must  oauth2-authorization-failure.en.must  oauth2-conversion-failure.en.must  oauth2-provider-failure.en.must  persona-exchange-unauthorized.en.must  persona-exchange-unpaid.en.must  (+11 more)
contrib/ci/: Containerfile  ci.sh  debian-package-job.sh  generate-jobs  riscv64.Containerfile  run-all-jobs
contrib/pp/: README  conf.py.in  pp.rst
contrib/samples/: wire-auditor.json
contrib/sigp/: .gitignore  Makefile  README  h.header  h.template
contrib/tos/: README  bfh.rst  conf.py.in  tos.rst
doc/: .gitignore  Makefile.am
doc/audit/: response-202005.tex  response-202012.tex  response-202109.tex
doc/cbdc-es/: cbdc-es.tex  cbdc.bib  graphic-es.odp
doc/cbdc-it/: agsm-mod.bst  cbdc-it.bib  cbdc-it.tex  graphics-it.odp
doc/cs/: bibliography.bib  bibliography_projekt2.bib  thesis.tex  variable.sty
doc/doxygen/: taler.doxy
doc/flows/: .gitignore  fees-coins.tex  fees-wire.tex  int-deposit.tex  int-pay.tex  int-pull.tex  int-push.tex  int-refund.tex  int-shutdown.tex  int-withdraw.tex  kyc-balance.tex  kyc-deposit.tex  kyc-pull.tex  kyc-push.tex  kyc-withdraw.tex  main.de.tex  main.tex  proc-aml.tex  proc-domestic.tex  proc-kyb.tex  proc-kyc.tex
doc/paper/: taler.tex  taler_FC2017.txt
doc/system/: .gitignore  conclusions.tex  introduction.tex  system.tex
src/: Makefile.am  taler-exchange.conf
src/auditor/: .gitignore  Makefile.am  auditor-basedb-libeufin.sql  auditor-basedb.age  auditor-basedb.conf  auditor-basedb.fees  auditor-basedb.mpriv  auditor-basedb.mpub  auditor-basedb.sql  auditor.conf  batch.conf  batch.sh  generate-auditor-basedb.conf  generate-auditor-basedb.sh  generate-kyc-basedb.conf  generate-revoke-basedb.sh  report-lib.c  report-lib.h  revoke-basedb-libeufin.sql  revoke-basedb.age  revoke-basedb.conf  revoke-basedb.fees  revoke-basedb.mpub  revoke-basedb.sql  setup.sh  taler-auditor-dbinit.c  taler-auditor-exchange.c  taler-auditor-httpd.c  taler-auditor-httpd.h  taler-auditor-httpd_amount-arithmetic-inconsistency-del.c  taler-auditor-httpd_amount-arithmetic-inconsistency-del.h  taler-auditor-httpd_amount-arithmetic-inconsistency-get.c  taler-auditor-httpd_amount-arithmetic-inconsistency-get.h  taler-auditor-httpd_amount-arithmetic-inconsistency-put.c  taler-auditor-httpd_amount-arithmetic-inconsistency-put.h  taler-auditor-httpd_amount-arithmetic-inconsistency-upd.c  taler-auditor-httpd_amount-arithmetic-inconsistency-upd.h  taler-auditor-httpd_bad-sig-losses-del.c  taler-auditor-httpd_bad-sig-losses-del.h  taler-auditor-httpd_bad-sig-losses-get.c  (+250 more)
src/auditordb/: .gitignore  0002-auditor-triggers.sql  0002-auditor_amount_arithmetic_inconsistency.sql  0002-auditor_bad_sig_losses.sql  0002-auditor_balance_summary.sql  0002-auditor_balances.sql  0002-auditor_closure_lags.sql  0002-auditor_coin_inconsistency.sql  0002-auditor_denomination_key_validity_withdraw_inconsistency.sql  0002-auditor_denomination_pending.sql  0002-auditor_denominations_without_sigs.sql  0002-auditor_deposit_confirmations.sql  0002-auditor_emergency.sql  0002-auditor_emergency_by_count.sql  0002-auditor_exchange_signkeys.sql  0002-auditor_fee_time_inconsistency.sql  0002-auditor_historic_denomination_revenue.sql  0002-auditor_historic_reserve_summary.sql  0002-auditor_misattribution_in_inconsistency.sql  0002-auditor_pending_deposits.sql  0002-auditor_predicted_result.sql  0002-auditor_progress.sql  0002-auditor_progress_aggregation.sql  0002-auditor_progress_coin.sql  0002-auditor_progress_deposit_confirmation.sql  0002-auditor_progress_purse.sql  0002-auditor_progress_reserve.sql  0002-auditor_purse_not_closed_inconsistencies.sql  0002-auditor_purse_summary.sql  0002-auditor_purses.sql  0002-auditor_refreshes_hanging.sql  0002-auditor_reserve_balance.sql  0002-auditor_reserve_balance_insufficient_inconsistency.sql  0002-auditor_reserve_balance_summary_wrong_inconsistency.sql  0002-auditor_reserve_in_inconsistency.sql  0002-auditor_reserve_not_closed_inconsistency.sql  0002-auditor_reserves.sql  0002-auditor_row_inconsistency.sql  0002-auditor_row_minor_inconsistencies.sql  0002-auditor_wire_fee_balance.sql  (+397 more)
src/bank-lib/: Makefile.am  bank_api_account_token.c  bank_api_admin.c  bank_api_admin_add_incoming.c  bank_api_admin_add_kycauth.c  bank_api_common.c  bank_api_common.h  bank_api_credit.c  bank_api_debit.c  bank_api_parse.c  bank_api_transfer.c  fakebank.c  fakebank.h  fakebank_api_check.c  fakebank_bank.c  fakebank_bank.h  fakebank_bank_accounts_withdrawals.c  fakebank_bank_accounts_withdrawals.h  fakebank_bank_get_accounts.c  fakebank_bank_get_accounts.h  fakebank_bank_get_accounts_withdrawals.c  fakebank_bank_get_accounts_withdrawals.h  fakebank_bank_get_root.c  fakebank_bank_get_root.h  fakebank_bank_get_withdrawals.c  fakebank_bank_get_withdrawals.h  fakebank_bank_post_accounts_token.c  fakebank_bank_post_accounts_token.h  fakebank_bank_post_accounts_withdrawals.c  fakebank_bank_post_accounts_withdrawals.h  (+56 more)
src/benchmark/: README  (+15 more)
(+1500 files in other folders)
