# This Makefile.am is in the public domain

SUBDIRS = . doxygen

man_MANS = \
  prebuilt/man/taler-auditor.1             \
  prebuilt/man/taler-exchange-benchmark.1  \
  prebuilt/man/taler-helper-auditor-coins.1\
  prebuilt/man/taler-auditor-dbinit.1      \
  prebuilt/man/taler-exchange-closer.1     \
  prebuilt/man/taler-helper-auditor-deposits.1\
  prebuilt/man/taler-auditor-exchange.1     \
  prebuilt/man/taler-exchange-dbinit.1  \
  prebuilt/man/taler-helper-auditor-reserves.1\
  prebuilt/man/taler-auditor-httpd.1       \
  prebuilt/man/taler-exchange-httpd.1       \
  prebuilt/man/taler-helper-auditor-wire.1\
  prebuilt/man/taler-auditor-offline.1    \
  prebuilt/man/taler-exchange-offline.1    \
  prebuilt/man/taler-auditor-sign.1       \
  prebuilt/man/taler-exchange-secmod-eddsa.1\
  prebuilt/man/taler-bank-transfer.1   \
  prebuilt/man/taler-exchange-secmod-rsa.1 \
  prebuilt/man/taler.conf.5            \
  prebuilt/man/taler-exchange-transfer.1\
  prebuilt/man/taler-config-generate.1     \
  prebuilt/man/taler-exchange-wirewatch.1   \
  prebuilt/man/taler-wire-gateway-client.1\
  prebuilt/man/taler-exchange-aggregator.1 \
  prebuilt/man/taler-helper-auditor-aggregation.1

info_TEXINFOS = \
  prebuilt/texinfo/taler-auditor.texi \
  prebuilt/texinfo/taler-exchange.texi \
  prebuilt/texinfo/taler-bank.texi

EXTRA_DIST = \
  $(man_MANS) \
  doxygen/taler.doxy \
  $(info_TEXINFOS) \
  prebuilt/texinfo/taler-auditor-figures/auditor-db.png \
  prebuilt/texinfo/taler-auditor-figures/replication.png  \
  prebuilt/texinfo/taler-bank-figures/arch-api.png  \
  prebuilt/texinfo/taler-bank-figures/auditor-db.png       \
  prebuilt/texinfo/taler-bank-figures/exchange-db.png \
  prebuilt/texinfo/taler-bank-figures/merchant-db.png \
  prebuilt/texinfo/taler-bank-figures/replication.png \
  prebuilt/texinfo/taler-exchange-figures/auditor-db.png \
  prebuilt/texinfo/taler-exchange-figures/exchange-db.png\
  prebuilt/texinfo/taler-exchange-figures/replication.png
